fixes: alignment of multiple text blocks in pp-text & homepage cta button size on wider screens

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/page-parts/_pp_text.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/page-parts/_pp_text.scss
@@ -1,3 +1,5 @@
 .pp_text {
-  /* nothing default */
+ p + p {
+   padding-top: 2.5rem;
+ }
 }
